@@ -1607,11 +1607,8 @@ Valid embedded codes for custom prompts include:\n\r\
 %Ke:  Display the tanks name           %KE:  Display the tanks health\n\r\
 %I :  Display hidden/invis. status     %@ :  Display the weather here\n\r\
 %d :  Display the range to your victim %r :  Display name of the room\n\r\
-%B :  Go to a new line\n\r\
-\n\r\
-ARCHON ONLY:\n\r\
-%R  :  Display the room number you are in\n\r\
-%z  :  Display the area name you are in\n\r\
+%B :  Go to a new line                 %z :  Display current area name\n\r\
+%R :  Display current room number (ARCHON ONLY)\n\r\
 \n\r\
 COLORS:\n\r\
 ^^h :  Standard hit point color        ^^m :  Standard mana color\n\r\
